app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-sora), Arial, Helvetica, sans-serif;
}

.btn-primary
{
  padding: 0.75rem 1.5rem;
  background-color: #7e6e51;
  border: 3.5px inset #493e2a;
  color: #ffffff;
  font-weight: 500;
  /* border-radius: 0.75rem; */
  /* border: none; */
  cursor: pointer;
}

.btn-primary:hover
{
  background-color: #94825f;
  border: 3.5px inset #493e2a;
}

.input-email
{
  flex: 1;
  padding: 0.75rem 1rem;
  border: 3.5px inset #493e2a;
  color: #000000;
  font-size: 1.5rem;
  outline: none;
}

.input-email:focus
{
  border-color: #493e2a;
}

.input-email::placeholder
{
 color: #555555;
}

.input-email:invalid
{
  border-color: #493e2a;
}

